--- a/web/src/components/room/room.scss
+++ b/web/src/components/room/room.scss
@@ -69,8 +69,9 @@
     background-size: 100% 100%;
     &>header {
         height: 1.65rem;
+        height: 1.25rem;
         width: 100%;
-        padding: 0.8rem 0.0rem 0.0rem;
+        padding: 0.4rem 0.0rem 0.0rem;
         z-index: 2;
         @include box-sizing();
         background: #2F2E34;
@@ -87,7 +88,8 @@
                 a{ color: #fff; }
             }
             li:first-child {
-                width: 40%;
+                width: 30%;
+                padding-right: 10%;
                 &>i {
                     display: inline-block;
                     margin-top: -0.037037rem;
@@ -228,6 +230,7 @@
         }
     }
     .userK {
+
         &>div:first-child{
             // height: 1.64rem;
             margin-bottom: .16rem;
@@ -281,7 +284,7 @@
                 opacity: 1;
             }
         }
-        padding: 0.4rem 0 0;
+        padding: 0.8rem 0 0;
         // margin-bottom: 2.694444rem; center_top
         width: 100%;
         position: relative;
@@ -404,6 +407,8 @@
             @include LR;
             width: 1.8rem;
             padding-right: 0.2rem;
+            padding-top: 2.407407rem;
+            margin-bottom: 12%;
             box-sizing: border-box;
             // position: relative; px
             
@@ -528,7 +533,7 @@
             ul{
                 height: 100%;
                 width: 100%;
-                padding-top: 2.407407rem;
+                // padding-top: 2.407407rem;
                 position: static;
             }
             ul::-webkit-scrollbar{display: none;}
@@ -546,7 +551,7 @@
             @include LR;
             // height: 100%;
             width: 1.666667rem;
-            padding-bottom: 20%;
+            padding-bottom: 12%;
             z-index: 3;
             @include order(2);
             ul {
@@ -587,12 +592,12 @@
                 z-index: 20;
             }
             .jieguo{
-                animation: chenji02 3s linear 1;
+                animation: chenji02 4s linear 1;
                 position: absolute;
                 left: 50%;
                 top: 40%;
                 font-size: 1.3rem;
-                transform: translate(-50%,-100%);
+                transform: translate(-50%,-80%);
                
                 background-image: -webkit-linear-gradient(#FFFDC3, #FAB14B);
                 list-style-image: -webkit-linear-gradient(#FFFDC3, #FAB14B);
@@ -618,7 +623,15 @@
                 //     font-size: 0.8rem;
                 //     // transform: scale(0.65,0.65);
                 // }
-                60%{
+                50%{
+                    filter:alpha(opacity=100);
+                    -moz-opacity:1;  
+                    -khtml-opacity: 1;  
+                    opacity: 1;
+                    font-size: 1.3rem;
+                    // transform: scale(0.8,0.8);
+                }
+                90%{
                     filter:alpha(opacity=100);
                     -moz-opacity:1;  
                     -khtml-opacity: 1;  
